--- a/AmicaleINSA/Base.lproj/LaunchScreen.storyboard
+++ b/AmicaleINSA/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,29 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_amicale" translatesAutoresizingMaskIntoConstraints="NO" id="MN4-c8-iWP">
+                                <rect key="frame" x="213" y="192" width="174" height="215"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="174" id="3dz-TX-KF5"/>
+                                    <constraint firstAttribute="height" constant="215" id="Ft9-ZH-dRG"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2016 Arthur Papailhau. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="GiM-DW-Snb">
+                                <rect key="frame" x="68" y="571" width="464" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MN4-c8-iWP" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="1yj-BF-fFi"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="GiM-DW-Snb" secondAttribute="bottom" constant="8" symbolic="YES" id="UZM-7K-Phw"/>
+                            <constraint firstItem="MN4-c8-iWP" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="X1i-22-wba"/>
+                            <constraint firstItem="GiM-DW-Snb" firstAttribute="centerX" secondItem="MN4-c8-iWP" secondAttribute="centerX" id="coW-zs-fXl"/>
+                            <constraint firstItem="GiM-DW-Snb" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="48" id="v2Y-3C-1SL"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +47,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo_amicale" width="1656" height="2204"/>
+    </resources>
 </document>
